--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = "4.3.15"
+colored = "2.0.4"
+flate2 = "1.0.26"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+tar = "0.4.39"
+whoami = "1.4.1"
